# py_electrodes

./: .gitignore  LICENSE  MANIFEST.in  README.md  Settings.txt  pyproject.toml  requirements.txt  setup.py  spec-file-win.txt
Examples/: assembly_example.py  brep_example.py  entrance_plate.geo  vane_xm.geo  vane_ym.geo
py_electrodes/: Settings.txt  __init__.py  gmsh_installer.py  py_electrodes.py  py_electrodes.pyx  py_electrodes_occ.pyx  settings.py  tk_filedialog.py
py_electrodes/Doc/: spec-file-win.txt
py_electrodes/Examples/: assembly_example.py  entrance_plate.brep  entrance_plate.stl  exit_plate.geo  stl_example.py  vane_yp.geo
py_electrodes/doc/: environment.yml  spec-file-ubuntu18.txt
py_electrodes/documents/: conda_env_win.yml  environment.yml
py_electrodes/examples/: boundary_conditions_example.py  collision_detection_example.py  geo_example.py  geo_str_example.py  ray_intersection_example.py  vane_xp.geo
